update payments methods

--- a/styles.css
+++ b/styles.css
@@ -80,12 +80,14 @@ body, html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 100%;
-  width: auto;
   margin-bottom: 20px;
   padding: 6px 15px 4px;
   background-color: rgb(1, 3, 5);
   color: #fff;
+}
+
+.page-content__list-item:nth-child(3) {
+  margin-bottom: 60px;
 }
 
 .page-content__list-item-text {
@@ -98,6 +100,7 @@ body, html {
 }
 
 .page-content__list-item-text span {
+  display: inline-block;
   font-weight: 800;
 }
 
@@ -110,15 +113,64 @@ body, html {
   cursor: pointer
 }
 
-.page-content__list-item:first-child {
-  margin-bottom: 12px;
+.accordion-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-.page-content__list-item-subtitle {
-  margin-bottom: 20px;
-  font-size: 12px;
-  font-weight: 400;
-  color: rgb(1, 3, 5);
+.accordion-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  cursor: pointer;
+}
+
+.accordion-button.active {
+  margin-bottom: 10px;
+}
+
+.accordion-button.active .page-content__list-item-icon {
+  transform: rotate(180deg);
+}
+
+.accordion-panel {
+  display: none;
+  overflow: hidden;
+  width: 100%;
+  background-color: rgb(1, 3, 5);
+  color: white;
+}
+
+.accordion-panel li {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 10px 0;
+}
+
+.accordion-panel h4 {
+  margin-bottom: 10px;
+  font-size: 14px;
+  opacity: 0.8;
+}
+
+.accordion-panel .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.accordion-panel p {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.accordion-panel.active {
+  display: block;
 }
 
 @media (min-width: 576px) {
@@ -151,14 +203,6 @@ body, html {
 
   .page-content__title {
     font-size: 24px;
-  }
-
-  .page-content__list {
-    width: max-content;
-  }
-
-  .page-content__list-item {
-    width: max-content;
   }
 
   .page-content__list-item-text {
@@ -195,17 +239,16 @@ body, html {
     padding: 12px 20px 8px;
   }
 
-  .page-content__list-item:first-child {
-    margin-bottom: 12px;
-  }
-
   .page-content__list-item-text {
     font-size: 24px;
     line-height: normal;
   }
 
-  .page-content__list-item-subtitle {
-    margin-bottom: 30px;
+  .accordion-panel h4 {
     font-size: 14px;
+  }
+
+  .accordion-panel .content {
+    font-size: 24px;
   }
 }
